# cvxpy-ml-devcontainer

./: README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
cvxpy_examples/image_colorization/: prepare_data.py  solve.py
cvxpy_examples/quadratic_optimization/: quadratic_optimization.py
cvxpy_examples/team_ranking/: a_hat.npy  data.py  evaluate.py  train.py
docs/: cvxpy_notes.md
notebooks/: population.ipynb
